fix markup spacing

--- a/totalimpactwebapp/static/less/create-collection.less
+++ b/totalimpactwebapp/static/less/create-collection.less
@@ -79,6 +79,9 @@ ul.pullers {
     margin-bottom: 70px;
    &.bibtex {
       margin-bottom: 20px;
+   }
+   &.orcid {
+      margin-bottom: 20px;
       margin-top:55px;
    }
 }
